--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,10 +14,8 @@ gradiente morado: linear-gradient(#76278f, #2B1E66)
 body {	
 	width: 100%;
 	font-family: 'Montserrat', sans-serif;
-    background: -webkit-linear-gradient(rgba(27,15,48,1) 0%, rgba(39,16,62,1) 30%, rgba(75,16,100,1) 64%, rgba(90,14,118,1) 100%);
-    background: -o-linear-gradient(rgba(27,15,48,1) 0%, rgba(39,16,62,1) 30%, rgba(75,16,100,1) 64%, rgba(90,14,118,1) 100%);
-    background: linear-gradient(rgba(27,15,48,1) 0%, rgba(39,16,62,1) 30%, rgba(75,16,100,1) 64%, rgba(90,14,118,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b0f30', endColorstr='#5a0e76', GradientType=0 );
+    background: linear-gradient(to bottom, rgba(27,15,48,1) 0%, rgba(39,16,62,1) 30%, rgba(82,13,108,1) 72%, rgba(102,14,131,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b0f30', endColorstr='#660e83', GradientType=0 );
     color: white;
 }
 /*nav*/
@@ -50,4 +48,61 @@ a.nav-menu.borde-blanco{
 video{
 	width: 97%;
 	margin-top: -100px;
+}
+/*registro*/
+section.flex-container.registro-caja{
+	flex-direction: column;
+    justify-content: space-between;
+    width: 450px;
+    padding: 40px;
+    margin-top: 85px;
+    position: absolute;
+    right: 0;
+    background-color: #fff;
+}
+h2.text-uppercase.miles.mb-0.mt-0{
+	color: #352384;
+	font-weight: 600;
+	font-size: 2.2rem;
+	margin: 8px;
+}
+h6.text-uppercase.mb-0.mt-0{
+	margin: 5px;
+	color: #000;
+    margin-left: 10px;
+    font-size: medium;
+    font-weight: 400;
+}
+/*input*/
+input#input-number{
+    padding: 10px;
+    margin: 10px;
+    margin-left: -220px;
+    border: none;
+    border-bottom: solid 2px #999;
+    outline: 0;
+    background-color: transparent;
+    font-size: 16px;
+}
+.btn-driver-class{
+	padding: 15px 20px;
+    border: none;
+    margin: 10px;
+    margin-left: -100px;
+    color: #fff;
+    background-color: #FF00BF;
+    border-radius: 5px;
+    font-size: 1.1rem;
+    cursor: pointer;
+}
+div.btn-a{
+	display: inline-flex;
+}
+a.already, a.earn-money{
+	text-decoration: none;
+	font-size: small;
+	color: #999;
+}
+a.sign-up-to-ride{
+	padding-top: 25px;
 }
